src/App.css
.App {
  text-align: center;
}

.sign {
  height: 40vmin;
  pointer-events: none;
}


.App-header {
  background-color: #282c34;
  min-height: 100vh;
  min-width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}


.Scene {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  background-color: black;
  overflow-x: scroll;    
  white-space: nowrap;
  width: 100%;
}

.wrapper {
  overflow: visible;
}

.Scene img,
.Scene svg {
  object-fit: fill;
  object-position: left top;
  overflow-x: visible;
  vertical-align: top;
  /* height: 100vmin;
  width: auto; */
  height: auto;
  width: 100vmax;
}

.button-strip {
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100vw;
}

.button-strip button {
  height: 50px;
  margin-right: 2vw;
  cursor: pointer;
}

.text-box {
  width: 15vw;
  min-height: 25vh;
  position: fixed;
  top: 10vh;
  left: 2.5vw;
  background-color: white;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  border: 1px solid black;
  padding: 1em;
}



.text-box.show {
  animation: fadeIn 0.9s ease-out forwards;
}
.text-box.fade {
  animation: fadeOut 0.6s ease-in forwards;
}

@keyframes fadeIn {
  0%    { opacity: 0; }
  100%  { opacity: 1; }
}

@keyframes fadeOut {
  0%    { opacity: 1; }
  100%  { opacity: 0; }
}

.audio-files {
  visibility: hidden;
}


.top-text {
  height: 5vmin;
  color: white;
  position: sticky;
  top: 0;
  left: 0;
  background-color: #282c34;
  width: 100vw;
}




.clickable-shape {
  opacity: 0;
  stroke: black;
  /* stroke-width: 2pc; */
  cursor: pointer;
}

.clickable-nav {
  cursor: pointer;
  fill: transparent;
  stroke:white;
  stroke-miterlimit:10;
  stroke-width: 3px;

}
.clickable-nav:hover {
  fill: #FFED00;
  opacity: 0.5;
}

#bedroom .clickable-nav {
  stroke-width: 0px;
}

#bedroom.lightoff .clickable-nav:hover {
  fill: #00ffed;
  opacity: 0.2;
}

#living .clickable-nav:hover {
  fill: #00ffed;
  opacity: 0.2;
}

#policeRportBig_Image {
  opacity: 0;
}

#LightON_Image {
  opacity: 0;
}

#obituaryBig_Image {
  opacity: 0;
}

#closeUPcar-2 {
  opacity: 0;
}

#backpostcard,
#frontpostcard {
  opacity : 0;
}

#closeUP {
  opacity: 0;
}
#expandedPostcardFrontId,
#PhoneHand text,
#doorPath_,
#ENDcALL_Image,
#cALL3_Image,
#Call2_Image,
#Call1_Image {
  cursor: pointer;
}

